Your links, they work!

--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -38,17 +38,18 @@ const githubEditUrl = `https://github.com/aFuzzyBear/astro-ui/blob/main/docs/XEl
             <aside class=".grid-left .grid-sidebar sticky-leftbar">
                 <div class="sidebar__feature">
                     <h3>
-                        <a href="../api">API</a>
+                        <a href="/docs/api/overview">API</a>
                     </h3>
                     <h3>
-                        <a href="../blog">Blog</a>
+                        <a href="/docs/blog/overview">Blog</a>
                     </h3>
                     <h3>
-                        <a href="../guides">Guides</a>
+                        <a href="/docs/guides/myfirstcomponents">Guides</a>
                     </h3>
                     <h3>
-                        <a href="../sarah">Sarah's Edits</a>
+                        <a href="/docs/sarah/overview">Sarah's Edits</a>
                     </h3>
+                    <h3>~~~</h3>
                 </div>
                 <Sidebar menu={menu} directory={directory}/>
             </aside>
