--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -7,6 +7,21 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Welcome to Astro</title>
+		<h2>Pick a card, any card . . . </h2>
+
+		<h3>
+			<a href="/docs/api/overview">API</a>
+		</h3>
+		<h3>
+			<a href="/docs/blog/overview">Blog</a>
+		</h3>
+		<h3>
+			<a href="/docs/guides/myfirstcomponents">Guides</a>
+		</h3>
+		<h3>
+			<a href="/docs/sarah/overview">Sarah's Edits</a>
+		</h3>
+
 		<style>
 			/* scoped CSS styles go here: */
 			/* h1 { ... } */
