let hope now that Sarah can indeed Edit 👀

--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -45,7 +45,7 @@ const intersectionFn = (element)=>{
                         <a href="../guides">Guides</a>
                     </h3>
                     <h3>
-                        <a href="../sarah">Sarah's Edits</a>
+                        <a href="../sarahedits">Sarah's Edits</a>
                     </h3>
                 </div>
                 <Sidebar menu={menu} directory={directory}/>
