--- a/www/xelement/src/styles/docsLayout.scss
+++ b/www/xelement/src/styles/docsLayout.scss
@@ -39,4 +39,21 @@ main.layout{
      border-top: 2px solid;
      padding-top: 0.5em;
  }
- 
+//  GitHub comments
+.comments {
+    padding: 2em;
+    background-color:rgb(97, 197, 97);
+    max-width: 80%;
+    margin: 0 auto;
+    border-radius: 2em;
+}
+
+footer {
+   margin-top: 2em;
+}
+
+.howwedo {
+    width: 80%;
+    margin: 0 auto;
+    border-top: 2px solid black;
+}
