Sarah's links fixed.

--- a/www/xelement/src/layouts/DocsLayout.astro
+++ b/www/xelement/src/layouts/DocsLayout.astro
@@ -47,7 +47,7 @@ const githubEditUrl = `https://github.com/aFuzzyBear/astro-ui/blob/main/docs/XEl
                         <a href="/docs/guides/myfirstcomponents">Guides</a>
                     </h3>
                     <h3>
-                        <a href="../sarahedits">Sarah's Edits</a>
+                        <a href="/docs/sarahedits/overview">Sarah's Edits</a>
                     </h3>
                     <h3>~~~</h3>
                 </div>
