--- a/www/xelement/src/pages/index.astro
+++ b/www/xelement/src/pages/index.astro
@@ -29,7 +29,7 @@
 			<a href="/docs/guides/myfirstcomponents">Guides</a>
 		</h3>
 		<h3>
-			<a href="/docs/sarah/overview">Sarah's Edits</a>
+			<a href="/docs/sarahedits/overview">Sarah's Edits</a>
 		</h3>
 	</body>
 </html>
