--- a/www/xelement/src/pages/docs/api/index.astro
+++ b/www/xelement/src/pages/docs/api/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../../../layouts/landingLayout.astro' 
+import getDocsRoutes from '../../../scripts/build/getDocRoutes'
+import withMetaData from '../../../scripts/build/withMetaData'
+import NestedGrid from '../../../components/Grid/NestedGrid.astro'
+let dataSet = []
+await withMetaData(getDocsRoutes('api')).then(res=>res.map(x=>dataSet.push({directory:x.props.directory, menu:x.props.menu})))
 ---
-<Layout >
-    
-  <h1>
-     Index Page {Astro.request.url.pathname}
-  </h1>
+<Layout content={dataSet[0]}>
+
 </Layout>
