--- a/www/xelement/src/components/ListBox.astro
+++ b/www/xelement/src/components/ListBox.astro
@@ -1,15 +1,18 @@
 ---
 import PrefetchLink from '../components/NavBar/PreFetchLink.astro'
 const {content:{name,href,meta}}=Astro.props
+const title = meta.title || meta.meta_title || name.split('-').join(' ')
+const description = meta.description || meta.page_description
+const sanitizer = (str)=> str?.replaceAll('<','&#60;').replaceAll('>','&#62;')
 ---
     <div>
         <PrefetchLink href={href}>
             <h3>
-                {meta?.api_title ?? name} - {meta?.page_title}
+                {sanitizer(title)}
             </h3>
             <div>
                 <p>
-                    {meta?.page_description}
+                    {sanitizer(description)}
                 </p>
             </div>
         </PrefetchLink>
