--- a/www/xelement/src/pages/docs/guides/[...slug].astro
+++ b/www/xelement/src/pages/docs/guides/[...slug].astro
@@ -1,11 +1,11 @@
 ---
 import DocsLayout from '../../../layouts/DocsLayout.astro'
 import filterPaths from '../../../scripts/build/getDocRoutes'
-import withNestedMenu from '../../../scripts/build/withNestedMenu'
+import withMetaData from '../../../scripts/build/withMetaData'
 
 export async function getStaticPaths() {
     const paths = filterPaths('guides')
-    return withNestedMenu(paths)
+    return withMetaData(paths)
 }
 ---
     <DocsLayout content={Astro.props}/>
