--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -55,7 +55,7 @@ async function writeToml(data){
 await writeToml(literal)
 exec('"./stork-ubuntu-20-04" build --input public/stork/stork.toml --output public/stork/xelement.st', (err, stdout, stderr) => {
   if (err) {
-    // node couldn't execute the command
+    console.log('Error executing stork command via NodeJS, Error message: ' + err.message);
     return;
   }
 
