--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -53,7 +53,7 @@ async function writeToml(data){
     }
 }
 await writeToml(literal)
-exec('"./stork-amazon-linux build --input public/stork/stork.toml --output public/stork/xelement.st', (err, stdout, stderr) => {
+exec('"./stork-amazon-linux build --input public/stork/stork.toml --output public/stork/xelement.st"', (err, stdout, stderr) => {
   if (err) {
     console.log('Error executing stork command via NodeJS, Error message: ' + err.message);
     return;
