--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -1,8 +1,8 @@
 ---
 import  filteredPaths from '../scripts/build/filteredPaths';
 import  withMetaData from '../scripts/build/withMetaData';
-import * as fs from 'node:fs/promises'
-import {exec} from 'node:child_process'
+import * as fs from 'node:fs/promises';
+import {spawn} from 'node:child_process';
 
 
 const list = []
@@ -53,7 +53,17 @@ async function writeToml(data){
     }
 }
 await writeToml(literal)
-exec('echo "Executing curl download" && curl -O https://files.stork-search.net/releases/v1.4.0/stork-amazon-linux && echo "Listing files and directories" && ls && echo "Adding run permissions to stork" && chmod +x stork-amazon-linux && echo "Running stork build" && ./stork-amazon-linux build --input public/stork/stork.toml --output public/stork/xelement.st', (err, stdout, stderr) => {
+
+const child = spawn('echo', ['Executing curl download']).on('exit' code =>{
+    const download = spawn('curl', ['-O', 'https://files.stork-search.net/releases/v1.4.0/stork-amazon-linux']).on('exit', code =>{
+        const runPerm = spawn('chmod', ['+x', 'stork-amazon-linux']).on('exit', code =>{
+            const generate = spawn('./stork-amazon-linux build', ['--input', 'public/stork/stork.toml', '--output', 'public/stork/xelement.st']).on('exit', code =>{
+                console.log("Execution chain completed with generate code of: ${code}");
+            })
+        })
+    })
+})
+/*exec('echo "Executing curl download" && curl -O https://files.stork-search.net/releases/v1.4.0/stork-amazon-linux && echo "Listing files and directories" && ls && echo "Adding run permissions to stork" && chmod +x stork-amazon-linux && echo "Running stork build" && ./stork-amazon-linux build --input public/stork/stork.toml --output public/stork/xelement.st', (err, stdout, stderr) => {
     if (err) {
         console.log('Error executing stork command via NodeJS, Error message: ' + err.message);
         return;
@@ -62,7 +72,7 @@ exec('echo "Executing curl download" && curl -O https://files.stork-search.net/r
     // the *entire* stdout and stderr (buffered)
     console.log(`stdout: ${stdout}`);
     console.log(`stderr: ${stderr}`);
-})
+})*/
 
 ---
     <!DOCTYPE html>
