--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -47,38 +47,13 @@ save_nearest_html_id = true
 `
 async function writeToml(data){
     try {
-        return await fs.writeFile(`./public/stork/stork.toml`,data,{encoding:'utf8'})
+        return await fs.writeFile(`./dist/stork/stork.toml`,data,{encoding:'utf8'})
     } catch (error) {
         console.error("Error Writing the Toml File:",error);
     }
 }
 await writeToml(literal)
 
-const child = spawn('echo', ['Executing curl download']);
-child.on('error', (err) =>{
-    if(err) console.log(err.message);
-});
-child.on('close', (code) =>{
-    const download = spawn('curl', ['-O', 'https://files.stork-search.net/releases/v1.4.0/stork-amazon-linux']);
-    download.on('error', (err) =>{
-        if(err) console.log(err.message);
-    });
-    download.on('close', (code) =>{
-        const runPerm = spawn('chmod', ['+x', 'stork-amazon-linux']);
-        runPerm.on('error', (err) =>{
-            if(err) console.log(err.message);
-        });
-        runPerm.on('close', (code) =>{
-            const generate = spawn('./stork-amazon-linux', ['build', '--input', 'public/stork/stork.toml', '--output', 'public/stork/xelement.st']);
-            generate.on('error', (err) =>{
-                if(err) console.log(err.message);
-            });
-            generate.on('close', (code) =>{
-                console.log("Generate completed with code: ", code);
-            })
-        })
-    })
-});
 
 /*exec('echo "Executing curl download" && curl -O https://files.stork-search.net/releases/v1.4.0/stork-amazon-linux && echo "Listing files and directories" && ls && echo "Adding run permissions to stork" && chmod +x stork-amazon-linux && echo "Running stork build" && ./stork-amazon-linux build --input public/stork/stork.toml --output public/stork/xelement.st', (err, stdout, stderr) => {
     if (err) {
