--- a/www/xelement/src/pages/search.astro
+++ b/www/xelement/src/pages/search.astro
@@ -3,6 +3,7 @@ import  filteredPaths from '../scripts/build/filteredPaths';
 import  withMetaData from '../scripts/build/withMetaData';
 import * as fs from 'node:fs/promises';
 import {spawn} from 'node:child_process';
+import SearchBox from '../components/Stork/StorkOutput.astro'
 
 
 const list = []
@@ -55,12 +56,12 @@ async function createDir(path){
 }
 async function writeToml(data){
     try {
-        return await fs.writeFile(`./dist/res/stork/stork.toml`,data,{encoding:'utf8'})
+        return await fs.writeFile(`public/res/stork/stork.toml`,data,{encoding:'utf8'})
     } catch (error) {
         console.error("Error Writing the Toml File:",error);
     }
 }
-await createDir('dist/res/stork');
+await createDir('public/res/stork');
 await writeToml(literal)
 
 
@@ -85,6 +86,6 @@ await writeToml(literal)
         <title>Document</title>
     </head>
     <body>
-        
+        <SearchBox />
     </body>
     </html>
